cedar-lean/UnitTest/parser_tests/negative/invalid_operator_div.cedar
permit(principal, action, resource) when { 10 / 2 == 5 };
